[gd_scene load_steps=5 format=2]

[ext_resource path="res://MoreDice.gd" type="Script" id=1]
[ext_resource path="res://baseClass/Dice.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/SourceHanSansCN-Normal.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_color = Color( 0.905882, 0.933333, 0.0980392, 1 )
font_data = ExtResource( 3 )

[node name="MoreDice" type="Node2D"]
script = ExtResource( 1 )

[node name="Dice1" parent="." instance=ExtResource( 2 )]

[node name="Dice2" parent="." instance=ExtResource( 2 )]
position = Vector2( 155.45, 59.437 )

[node name="Dice3" parent="." instance=ExtResource( 2 )]
position = Vector2( 144.02, -141.734 )

[node name="Label" type="Label" parent="."]
margin_left = 916.403
margin_top = 31.9955
margin_right = 1235.4
margin_bottom = 166.996
custom_fonts/font = SubResource( 1 )
